[package]
name = "marching_cubes_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.egui-wgpu]
version = "0.27.2"
features = ["winit", "wayland", "x11"]

[dependencies.egui]
version = "0.27.2"

[dependencies.bytemuck]
version = "1.15.0"
features = ["derive"]
default-features = false

[dependencies.log]
version = "0.4.21"
default-features = false

[dependencies.env_logger]
version = "0.11.3"
features = ["color"]
default-features = false

[dependencies.wgpu]
#version = "0.19.3"
version = "0.20.0"
features = ["wgsl"]
default-features = false

[dependencies.pollster]
version = "0.3.0"
default-features = false

[dependencies.winit]
version = "0.29.15"
features = ["x11", "wayland", "rwh_06", "wayland-dlopen", "wayland-csd-adwaita"]
default-features = false

[dependencies.cgmath]
version = "0.18.0"
default-features = false

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = true
